fixed alignment of components

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -22,6 +22,26 @@
   color: #61dafb;
 }
 
+.columnC{
+  display:flex;
+  flex-direction:column;
+
+  margin-left: 40px;
+  margin-right: 20px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  width: 400px;
+}
+
+.rowC {
+  display: flex;
+  flex-direction: row;
+}
+
+.button {
+  width: 50px;
+}
+
 #map {
   margin-left: auto;
   margin-right: auto;
@@ -43,9 +63,5 @@
 
 h1 {
   text-align: center;
-}
-
-h2 {
-  text-align: left;
 }
 
